fix: nav visibility

--- a/src/Components/UI/Navigation/VerticalNavBar/MenuItems/MenuItems.css
+++ b/src/Components/UI/Navigation/VerticalNavBar/MenuItems/MenuItems.css
@@ -20,9 +20,6 @@
   display: flex;
   flex-direction: column;
   margin: 1rem 0;
-}
-
-.vertical-nav-menu {
   margin-right: 10px;
 }
 
